- Discogs.com service now handles sub tracks correctly.
- Corrected all incorrect base settings, for new installation.
- Cleanup; corrected the record label module and field references, internal names
  were incorrect. The database will be automatically updated.

[To Do]
- Retest audio tagger.
- Finish the synch server.
- Move help to online.
- Issue with sorting
- (Auto update of Data Crow)
  
-----------------------------------------------------------------------------------------
Data Crow version 4.7.0                                            Released on 2023-03-02
-----------------------------------------------------------------------------------------
Data Crow 4.7 brings an much better look and feel, new online services (archive.org and
OpenLibrary.org) and a very much improved handling of item to item relationships.

[New]
- Archive.org software online book, software and movie search.
- Open Library (openlibrary.org) online book search. The online search fetches 
  edition information and work information.
- Added a new Look and Feel: FlatLaf Light. This is a more modern Look and Feel which is
  still actively developed (https://www.formdev.com/flatlaf/)
  This will be the default Look and Feel for Data Crow from now on (for new installations).
  Find it in Settings > Look and Feel
  Note that on upgrading the system will automatically switch to this skin.

[Changed]
- Now allowing for references to be made to main modules without removing the referenced
  module from the module menu.
  (https://datacrow.org/2023/02/17/relating-items-what-data-crow-4-7-will-bring-to-you/)
- Now allowing users to alter a module to create a reference to the module itself; 
  allowing for, for example, a field called related software item on a software item.
- Hierarchy view for containers will now show all items per container + the items of 
  children of the selected container.
- Small performance increase for the MobyGames.com search.