@@ -1,0 +1,131 @@
+/******************************************************************************
+ *                                     __                                     *
+ *                              <-----/@@\----->                              *
+ *                             <-< <  \\//  > >->                             *
+ *                               <-<-\ __ /->->                               *
+ *                               Data /  \ Crow                               *
+ *                                   ^    ^                                   *
+ *                              info@datacrow.org                             *
+ *                                                                            *
+ *                       This file is part of Data Crow.                      *
+ *       Data Crow is free software; you can redistribute it and/or           *
+ *        modify it under the terms of the GNU General Public                 *
+ *       License as published by the Free Software Foundation; either         *
+ *              version 3 of the License, or any later version.               *
+ *                                                                            *
+ *        Data Crow is distributed in the hope that it will be useful,        *
+ *      but WITHOUT ANY WARRANTY; without even the implied warranty of        *
+ *           MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.             *
+ *           See the GNU General Public License for more details.             *
+ *                                                                            *
+ *        You should have received a copy of the GNU General Public           *
+ *  License along with this program. If not, see http://www.gnu.org/licenses  *
+ *                                                                            *
+ ******************************************************************************/
+
+package org.datacrow.client.console.components;
+
+public class DcCollationComboBox extends DcComboBox {
+
+	public DcCollationComboBox() {
+        super();
+        
+    	addItem("Afrikaans");
+    	addItem("Albanian");
+    	addItem("Amharic");
+    	addItem("Arabic");
+    	addItem("Armenian");
+    	addItem("Assamese");
+    	addItem("Azerbaijani_Cyrillic");
+    	addItem("Azerbaijani_Latin");
+    	addItem("Basque");
+    	addItem("Belarusian");
+    	addItem("Bengali");
+    	addItem("Bosnian");
+    	addItem("Bulgarian");
+    	addItem("Burmese");
+    	addItem("Catalan");
+    	addItem("Chinese");
+    	addItem("Croatian");
+    	addItem("Czech");
+    	addItem("Danish");
+    	addItem("Danish_Norwegian");
+    	addItem("Dutch");
+    	addItem("English");
+    	addItem("Estonian");
+    	addItem("Finnish");
+    	addItem("French");
+    	addItem("Georgian");
+    	addItem("German");
+    	addItem("Greek");
+    	addItem("Guarani");
+    	addItem("Gujarati");
+    	addItem("Hausa");
+    	addItem("Hebrew");
+    	addItem("Hindi");
+    	addItem("Hungarian");
+    	addItem("Icelandic");
+    	addItem("Igbo");
+    	addItem("Indonesian");
+    	addItem("Inuktitut");
+    	addItem("Italian");
+    	addItem("Japanese");
+    	addItem("Kannada");
+    	addItem("Kashmiri");
+    	addItem("Kazakh");
+    	addItem("Khmer");
+    	addItem("Kirghiz");
+    	addItem("Konkani");
+    	addItem("Korean");
+    	addItem("Lao");
+    	addItem("Latin1_General");
+    	addItem("Latvian");
+    	addItem("Lithuanian");
+    	addItem("Macedonian");
+    	addItem("Malay");
+    	addItem("Malayalam");
+    	addItem("Maltese");
+    	addItem("Manipuri");
+    	addItem("Maori");
+    	addItem("Marathi");
+    	addItem("Mongolian");
+    	addItem("Nepali");
+    	addItem("Norwegian");
+    	addItem("Oriya");
+    	addItem("Pashto");
+    	addItem("Polish");
+    	addItem("Portuguese");
+    	addItem("Punjabi");
+    	addItem("Romanian");
+    	addItem("Russian");
+    	addItem("SQL_TEXT");
+    	addItem("SQL_TEXT_UCC");
+    	addItem("Sanskrit");
+    	addItem("Serbian_Cyrillic");
+    	addItem("Serbian_Latin");
+    	addItem("Sindhi");
+    	addItem("Slovak");
+    	addItem("Slovenian");
+    	addItem("Somali");
+    	addItem("Spanish");
+    	addItem("Swahili");
+    	addItem("Swedish");
+    	addItem("Tajik");
+    	addItem("Tamil");
+    	addItem("Tatar");
+    	addItem("Telugu");
+    	addItem("Thai");
+    	addItem("Tibetan");
+    	addItem("Tswana");
+    	addItem("Turkish");
+    	addItem("Turkmen");
+    	addItem("Ukrainian");
+    	addItem("Urdu");
+    	addItem("Uzbek_Latin");
+    	addItem("Venda");
+    	addItem("Vietnamese");
+    	addItem("Welsh");
+    	addItem("Yoruba");
+    	addItem("Zulu");
+    }
+}
