@@ -1,3 +1,4 @@
+lblDatabaseLanguage = Database Language
 lblSelectedItems = Selected Items
 lblIconSize = Icon Size
 lblSearchIsbn = Search by ISBN
