@@ -1,3 +1,4 @@
+tpDatabaseLanguage = The database language setting dictates how the database sorts information.
 tpFieldDescriptive = Enable this option if the field describes the item. In most cases this will be the name or title of the item. Make sure to set this option for at least one of the fields.
 tpFieldKey = This option is used to check whether an item is unique (apart from its internal system ID). This avoids duplication of items. Enable this for multiple fields to check on a combination of field values.
 tpFieldRequired = This indicates that the field must be filled before the item can be saved. 
