@@ -45,6 +45,8 @@ Data Crow version 4.8.0                                            Released on 2
 - Move help to online.
 - Issue with sorting
 - (Auto update of Data Crow)
+
+- Translate: lblDatabaseLanguage, tpDatabaseLanguage
   
 -----------------------------------------------------------------------------------------
 Data Crow version 4.7.0                                            Released on 2023-03-02
